[package]
name = "incident_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
anyhow = "1.0.97"

weil_rs = { path = "../wadk/adk/rust/weil_rs" }
weil_macros = { path = "../wadk/adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../wadk/adk/rust/weil_rs/weil_contracts" }

[lib]
crate-type = ["cdylib"]