[package]
name = "mongodb_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
# WeilChain dependencies
weil_rs = { path = "../wadk/adk/rust/weil_rs" }
weil_macros = { path = "../wadk/adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../wadk/adk/rust/weil_rs/weil_contracts" }

# MongoDB
mongodb = "2.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[lib]
crate-type = ["cdylib"]